--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -5,6 +5,16 @@
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
           <li class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item">
+            <div id="google_translate_element"></div>
+            <script type="text/javascript">
+                function googleTranslateElementInit() {
+                    new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+                }
+            </script>
+            <script
+                type="text/javascript"
+                src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+            ></script>
             <a href="https://Dennis-YB.github.io/" target="_self">
               <img class="svg" src="/images/en.svg" width="20pt"> 
               English
