--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -8,7 +8,7 @@
             <div id="google_translate_element"></div>
             <script type="text/javascript">
                 function googleTranslateElementInit() {
-                    new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+                    new google.translate.TranslateElement({ pageLanguage: 'zh-CN' }, 'google_translate_element');
                 }
             </script>
             <script
